<?xml version="1.0"?>
<package format="3">
  <name>my_world</name>
  <version>0.0.0</version>
  <description>Package for my RMF world and TurtleBot4 integration</description>
  <maintainer email="tu_correo@ejemplo.com">ar_pc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>rmf_demos_gz</exec_depend>
  <exec_depend>rmf_building_map_tools</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <exec_depend>turtlebot4_gz_bringup</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>irobot_create_description</exec_depend>
  <exec_depend>irobot_create_gz_bringup</exec_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>